# tableflight

./: .env  .env.dev  .env.prod  .env.template  .eslintrc.json  .gitignore  .prettierrc  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json  types.d.ts
.deployment/api/: Chart.yaml  values.yaml
.deployment/nginx-ingress/: Chart.yaml  values.yaml
.deployment/ui/: Chart.yaml  Chart.yml  values.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-to-stage.yml
api/: .env.template  .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: auth.ts  context.ts  schema.ts  server.ts
apps/api/: .env  Dockerfile  gql.d.ts  jest.config.ts  project.json  transform-graphql-jest-28-shim.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  webpack.config.ts
apps/api-e2e/: jest.config.ts  project.json  tsconfig.json  tsconfig.spec.json
apps/ui/: .eslintrc.json  Dockerfile  board-harness.html  index.html  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tsconfig.tsbuildinfo  vite.config.ts
apps/ui-e2e/: cypress.config.ts  playwright.config.ts  project.json  tsconfig.json
common/: types.d.ts  types.ts
libs/board-engine/: Cargo.toml  project.json
libs/board-engine/src/: board.rs  lib.rs  render_data.rs  state.rs
libs/video/: README.md  (+2 more)
server/: package.json  tsconfig.json
ui/: .eslintrc.cjs  Dockerfile  localhost.crt  localhost.key  package-lock.json  package.json  tailwind.config.js  tsconfig.json  twin.d.ts  vite.config.ts
(+280 files in other folders)
