[package]
name = "board-engine"
version = "0.1.0"
edition = "2021"
description = "Game board engine for Tableflight: state, interactions, and canvas rendering compiled to WebAssembly."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
